stderr
Hiker.java:9: error: cannot find symbol
        if(Array.equals(hand, aaa)){
           ^
  symbol:   variable Array
  location: class Hiker
1 error
